fix: participant table + shift details working fine now, added delete functionality

--- a/assets/style/_view_all_accounts.scss
+++ b/assets/style/_view_all_accounts.scss
@@ -34,13 +34,15 @@
     color: #2ECC71;
   }
 }
-.reject_button {
+.reject_button,
+.cancel_user_booking_button {
   span {
     color: #E74C3C;
   }
 }
 
 .approve_button,
-.reject_button {
+.reject_button,
+.cancel_user_booking_button {
   cursor: pointer;
 }
